# CMake

./: .gitignore  .gitmodules  README.md
cpp/: .CMakeLists.txt.un~  .main.cpp.un~  CMakeLists.txt  main.cpp
multiply/: multipier.cpp
multiplyShared/: CMakeLists.txt  multipier.hpp
multiplyStatic/: CMakeLists.txt
p1/: CMakeLists.txt
p1/src/cpp/: .adder.cpp.un~  .adder.h.un~  main.cpp
p10InstallSharedLib/: CMakeLists.txt  main.cpp
p2/: CMakeLists.txt  main.cpp
p3/: CMakeLists.txt  adder.cpp  main.cpp
p4/: CMakeLists.txt  build.sh  configure.sh  main.cpp  run.sh
p4/Adder/: CMakeLists.txt  adder.cpp
p5/: CMakeLists.txt  build.sh  main.cpp  p5Config.h.in  run.sh
p6OptionalLib/: CMakeLists.txt  OptionalLibConfig.h.in  cleanbuild.sh  configure.sh  install.sh  main.cpp  run.sh
p6OptionalLib/Adder/: CMakeLists.txt
p6OptionalLib/include/: OptionalLibConfig.h  adder.h
p6OptionalLib/lib/pkgconfig/: glfw3.pc
p6OptionalLib/libs/lib/pkgconfig/: glfw3.pc
p6OptionalLib/libs/share/doc/GLFW/html/: build_8md.html  build_guide.html  compat_8md.html  compat_guide.html  compile_8md.html  compile_guide.html  context_8md.html  context_guide.html  deprecated.html  dir_397d9aeee4af8edecac90968d93b57df.html  dir_528525bf25d7dfeed6764aad7d5c685a.html  dir_6771681c3c38b5b8d271ec6f9a117c30.html  dir_bfbbdeea101dde4ea693baf4134014bd.html  dir_f14e7b84a4328a3ec74c1b1c4945b3ab.html  doxygen_crawl.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8md.html  input_guide.html  internal_8md.html  (+23 more)
p6OptionalLib/share/doc/GLFW/html/: build_8md.html  build_guide.html  compat_8md.html  compat_guide.html  compile_8md.html  compile_guide.html  context_8md.html  context_guide.html  deprecated.html  dir_397d9aeee4af8edecac90968d93b57df.html  dir_528525bf25d7dfeed6764aad7d5c685a.html  dir_6771681c3c38b5b8d271ec6f9a117c30.html  dir_bfbbdeea101dde4ea693baf4134014bd.html  dir_f14e7b84a4328a3ec74c1b1c4945b3ab.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8md.html  input_guide.html  internal_8md.html  internals_guide.html  (+22 more)
p6OptionalLib/share/doc/GLFW/html/search/: all_3.js
p7/: CMakeLists.txt  cleanbuild.sh  main.cpp  p7Config.h.in
p8/: CMakeLists.txt
p9/: main.cpp
p9Shared/: CMakeLists.txt
